# C-Fringe-Search

./: .gitignore  CMakeLists.txt  README.md
include/: FringeGraph.h  FringeSearch.h
src/: FringeGraph.cpp  FringeSearch.cpp
test/: CMakeLists.txt  GraphFuzzingTest.cpp
